--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,28 +1,29 @@
 [package]
 name = "icfp2024"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 
-anyhow = "1.0.86"
-env_logger = "0.11.3"
-log = "0.4.21"
-serde = { version = "1.0.203", features = ["derive"] }
-serde_json = "1.0.117"
-clap = { version = "4.5.4", features = ["derive"] }
-derive_more = "0.99.17"
-ordered-float = { version = "4.2.0", features = ["serde"] }
+anyhow = "1.0.99"
+env_logger = "0.11.8"
+log = "0.4.27"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.142"
+clap = { version = "4.5.45", features = ["derive"] }
+derive_more = { version = "2.0.1", features = ["full"] }
+ordered-float = { version = "5.0.0", features = ["serde"] }
 approx = "0.5.1"
-rayon = "1.10.0"
-indicatif = "0.17.8"
-rand = "0.8.5"
-svg = "0.17.0"
-fd-lock = "4.0.2"
+rayon = "1.11.0"
+indicatif = "0.18.0"
+rand = "0.9.2"
+svg = "0.18.0"
+fd-lock = "4.0.4"
 lazy_static = "1.5.0"
 byte-strings = "0.3.1"
+cairo-rs = { version = "0.21.1", features = ["pdf", "svg"] }
 
 
 # [profile.release]
