--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,16 +16,8 @@ clap = { version = "4.5.45", features = ["derive"] }
 derive_more = { version = "2.0.1", features = ["full"] }
 ordered-float = { version = "5.0.0", features = ["serde"] }
 approx = "0.5.1"
-rayon = "1.11.0"
-indicatif = "0.18.0"
 rand = "0.9.2"
-svg = "0.18.0"
-fd-lock = "4.0.4"
-lazy_static = "1.5.0"
-byte-strings = "0.3.1"
 cairo-rs = { version = "0.21.1", features = ["pdf", "svg"] }
 gtk = { version = "0.10.0", package = "gtk4", features = ["v4_18"] }
 async-channel = "2.5.0"
-
-# [profile.release]
-# debug = 1
+rusqlite = { version = "0.37.0", features = ["bundled"] }
